tools/flowc/tests/errors/error25.flow
int(false : bool, false : int) -> int {
	bool = 2;
	1;
}

true(false : int);
